              relying on ternary operator, also add parens in pretty-printing
              of ternary operatory.
Feb 11, 2011: Improved reporting of unitialized value errors
              Made dynamic semantics errors more extreme, since they should be
              precluded by typechecking in all instances.

0.2.4 --> 0.2.5
Feb 15, 2011: Typedefs now (correctly) expanded recursively, bug reported
              by Karl Naden and Sean Donegan.

0.2.5 --> 0.2.6
Feb 23, 2011: Fixed terrible allocation bug that had existed in bare runtime
              Added dynamic check to getting rid of variables at interface
              Fixed bug where calling.sml was not expanding typedefs fully

0.2.6 --> 0.2.7
May 12, 2011: Null pointers were occasionally raising a dynamic typing error
              instead of a null pointer exception.
              Fix problems with function calls involving arrays
              Distinguish negative sized array errors
              Fix sign conversion issues for integers. 
              Show caller when @requires assertions are violated
Jun 6, 2011:  Make chars display as '\0' not '\000'
              Refuse to print straings with non-displayable characters in 
              Coin (these can appear thanks to the string library)

0.2.7 --> 0.2.8
Aug 19, 2011: Change native interface to remove assembly code dependency
              Refactor dependencies between cymbol and coin

0.2.8 --> 0.2.9
Oct 25, 2011: Rewrite coin.sml to use the parse3 architecture
              Make the main coin operation a bit less stateful

0.2.9 --> 0.2.10
Jan 13, 2011: Fix bug where the second argument to alloc_array was evaluated
              two times.

0.2.10 --> 0.3.0
Feb 6, 2011:  Modify implementation to support different foreign functions.
Mar 3, 2011:  Experimental Cygwin compatibility
May 5, 2012:  Hack to allow pointer offsets in isolated code (cymbol)
Aug 20, 2012: Finish getting code isolation to work at the top-level