@@ -36,6 +36,9 @@ signature STATE = sig
   val char           : char          -> value
   val string         : string        -> value
 
+  (* Lets NULLs know their type *)
+  val tag            : 'a state * Ast.tp * value -> value 
+
   (* NOTE: the types passed to pointer and array must be free of type names *)
   val pointer        : Ast.tp * addr  -> value
   val array          : Ast.tp * addr * int -> value
