@@ -1,0 +1,6 @@
+int main() {
+  int _tmp1;
+  int _tmp_1;
+  int* i = alloc(int);
+  return 1;
+}
