@@ -1,0 +1,11 @@
+int foo (int cc0_assert)
+//@ensures \result > \result;
+{
+  return cc0_assert + 1;
+}
+
+int main ()
+{
+  return foo(1);
+}
+
