@@ -1,0 +1,11 @@
+int foo (int cc0_string_fromliteral)
+//@ensures \result > \result;
+{
+  return cc0_string_fromliteral + 1;
+}
+
+int main ()
+{
+  return foo(1);
+}
+
